Simple API exposure

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,17 @@
-##spring config
+##application config##
+la14.home=/Users/poojashingavi/IdeaProjects/crawlingSpiders
+
+#logging config
+logging.level.org.springframework=INFO
+logging.level.com.cse535.lab4=INFO
+logging.file=${la14.home}/server.log
+
+##spring config##
 server.error.whitelabel.enabled=false
-server.port = 8090
+server.port = 5000
+
+
+##solr config##
+solr.host = localhost
+solr.port = 8983
+solr.core = lab4
