Pooja - City-tweetCount API complete

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,10 @@
 ##application config##
 la14.home=/Users/poojashingavi/IdeaProjects/crawlingSpiders
+NYC=United States
+Delhi=India
+Paris=France
+Bangkok=Singapore
+Mexico=Mexico
 
 #logging config
 logging.level.org.springframework=INFO
@@ -8,10 +13,10 @@ logging.file=${la14.home}/server.log
 
 ##spring config##
 server.error.whitelabel.enabled=false
-server.port = 5000
+server.port=5000
 
 
 ##solr config##
-solr.host = localhost
-solr.port = 8983
-solr.core = lab4
+solr.host=localhost
+solr.port=8983
+solr.core=lab4
