City-tweetCount API more changes

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,7 @@ la14.home=/Users/poojashingavi/IdeaProjects/crawlingSpiders
 NYC=United States
 Delhi=India
 Paris=France
-Bangkok=Singapore
+Bangkok=Thailand
 Mexico=Mexico
 
 #logging config
