getTweets API exposed

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,10 @@
 ##application config##
 la14.home=/Users/poojashingavi/IdeaProjects/crawlingSpiders
-NYC=United States
-Delhi=India
-Paris=France
-Bangkok=Thailand
-Mexico=Mexico
+nyc=United States
+delhi=India
+paris=France
+bangkok=Thailand
+mexico=Mexico
 
 #logging config
 logging.level.org.springframework=INFO
