Rest API- getTweets supporting multiple cities and lang param

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,6 +17,10 @@ server.port=5000
 
 
 ##solr config##
-solr.host=localhost
-solr.port=8983
-solr.core=lab4
+solr.local.host=localhost
+solr.local.port=8983
+solr.local.core=lab4
+
+solr.remote.host=18.224.108.100
+solr.remote.port=8983
+solr.remote.core=IRF18P1
