--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,10 +17,11 @@ server.port=5000
 
 
 ##solr config##
-solr.local.host=localhost
-solr.local.port=8983
-solr.local.core=lab4
+solr.host=18.220.52.62
+solr.port=8983
+solr.core=IRF18P1
 
-solr.remote.host=18.224.108.100
-solr.remote.port=8983
-solr.remote.core=IRF18P1
+#EC2 replace
+#18.220.52.62
+##8983
+##IRF18P1
