--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,6 +6,23 @@ paris=France
 bangkok=Thailand
 mexico=Mexico
 
+startDateWeek1=2018-10-01
+startDateWeek2=2018-10-08
+startDateWeek3=2018-10-15
+startDateWeek4=2018-10-22
+startDateWeek5=2018-10-29
+startDateWeek6=2018-11-05
+startDateWeek7=2018-11-12
+
+endDateWeek1=2018-10-07
+endDateWeek2=2018-10-14
+endDateWeek3=2018-10-21
+endDateWeek4=2018-10-28
+endDateWeek5=2018-11-04
+endDateWeek6=2018-11-11
+endDateWeek7=2018-11-18
+
+
 #logging config
 logging.level.org.springframework=INFO
 logging.level.com.cse535.lab4=INFO
